--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ url: http://localhost:4000
 permalink:   /:categories/:title/
 markdown:    kramdown
 highlighter: rouge
+
 sass:
   sass_dir: _sass
   style: compressed
@@ -48,7 +49,7 @@ titlecase: true
 
 # Site owner
 owner:
-  name: Your Name
+  name: BLA
   avatar: bio-photo.jpg
   email: you@email.com
   disqus-shortname:
